test/TestPhases/parser/valid/importpath.blc
import adir.mymod from <a_director/my mod>

module

activity main()
end

