test/TestPhases/parser/invalid/importMalformed5.blc
import mymod "mod.infix" // not dots in Blech file names!

module

activity main()
end

